--- a/Mission_to_Mars.ipynb
+++ b/Mission_to_Mars.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "id": "4fe220e7",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "id": "5d971f02",
    "metadata": {},
    "outputs": [
@@ -30,8 +30,7 @@
       "====== WebDriver manager ======\n",
       "Current google-chrome version is 99.0.4844\n",
       "Get LATEST chromedriver version for 99.0.4844 google-chrome\n",
-      "Trying to download new driver from https://chromedriver.storage.googleapis.com/99.0.4844.51/chromedriver_mac64.zip\n",
-      "Driver has been saved in cache [/Users/rahul/.wdm/drivers/chromedriver/mac64/99.0.4844.51]\n"
+      "Driver [/Users/rahul/.wdm/drivers/chromedriver/mac64/99.0.4844.51/chromedriver] found in cache\n"
      ]
     }
    ],
@@ -260,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "id": "b77b1c66",
    "metadata": {},
    "outputs": [],
